# CUDA-raymarcher

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD  plot.py
src/: benchmark.cu  main.cu  timer.cuh  utils.cu  utils.h
src/core/: camera.cpp  camera.cu  camera.h  light.cu  light.h  list.cu  list.h  material.h  object.cu  object.h  ray.cpp  ray.cu  ray.h  scene.cu  scene.h  vector.cpp  vector.cu  vector.h  world.cpp  world.cu  world.h
src/material/: cuda_noise.cuh  material.cu  material.h  phong.cu  phong.h  sampler.cuh  volume.cu  volume.h
src/object/: bounding-box.cu  bounding-box.h  object.cu  object.h  sphere.cu  sphere.h
